# TheLeague

./: .env  .gitignore  All Sports Fantasy 2022.ipynb  All Sports Fantasy 2023.ipynb  Test.rtf  pyproject.toml  test.py
.ipynb_checkpoints/: All Sports Fantasy 2023-checkpoint.ipynb
scripts/: back_scraping.py
src/theleague/: constants.py  nba_handler.py  nfl_handler.py  test.ipynb  utilities.py
src/theleague/constants/: nfl_constants.py  schemas.py
src/theleague/handlers/: base_handler.py  nfl_handler.py  nfl_handler_II.py  nhl_handler.py
src/theleague/pydantic_models/: leagues_model.py  nfl_model.py  utilities.py
src/theleague/pydantic_models/processing_models/: leagues.py
src/theleague/pydantic_models/response_models/: league_response.py
tests/data/: 2023_games.html  old_sample_game.html
tests/unit/: nfl_handler_unit_test.py
